[project]
name = "projeto-routing"
version = "0.1.0"
description = ""
authors = [
    {name = "Hans Buss",email = "hans.buss@mailfence.com"}
]
package-mode = false
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "lefdef (>=0.6.0,<0.7.0)",
    "networkx (>=3.5,<4.0)",
    "matplotlib (>=3.10.3,<4.0.0)"
]
[tool.poetry]

[tool.poetry.group.dev.dependencies]
lefdef = "^0.6.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
